--- a/SQLite.Data/SQLite.DAL.csproj
+++ b/SQLite.Data/SQLite.DAL.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\SuffixName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
