Database directory changed.

--- a/SQLite.WEB/Web.config
+++ b/SQLite.WEB/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SQLiteDbContext" connectionString="Data Source=C:\ASP.NET\SQLiteTest\SQLite.Data\App_Data\sqlitetest.sqlite; Foreign Keys=True;" providerName="System.Data.SQLite" />
+    <add name="SQLiteDbContext" connectionString="Data Source=C:\ASP.NET\SQLiteTest\SQLite.DAL\App_Data\sqlitetest.sqlite; Foreign Keys=True;" providerName="System.Data.SQLite" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
