--- a/SQLite.DAL/Web.config
+++ b/SQLite.DAL/Web.config
@@ -27,7 +27,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SqliteDbContext" connectionString="Data Source=C:\ASP.NET\SQLiteTest\SQLite.Data\App_Data\sqlitetest.sqlite" providerName="System.Data.SQLite" />
+    <add name="SQLiteDbContext" connectionString="Data Source=C:\ASP.NET\SQLiteTest\SQLite.DAL\App_Data\sqlitetest.sqlite; Foreign Keys=True;" providerName="System.Data.SQLite" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
