--- a/SQLite.WEB/SQLite.WEB.csproj
+++ b/SQLite.WEB/SQLite.WEB.csproj
@@ -204,8 +204,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ByNameTypeViewModel.cs" />
     <Compile Include="Models\PersonViewModel.cs" />
-    <Compile Include="Models\SuffixNameViewModel.cs" />
+    <Compile Include="Models\ByNameViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
