--- a/SQLite.DAL/SQLite.DAL.csproj
+++ b/SQLite.DAL/SQLite.DAL.csproj
@@ -113,8 +113,11 @@
     <Compile Include="Interfaces\IEntity.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\EventType.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\ByName.cs" />
+    <Compile Include="Models\Place.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
