--- a/SQLite.BLL/SQLite.BLL.csproj
+++ b/SQLite.BLL/SQLite.BLL.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Enums\GenDateType.cs" />
     <Compile Include="Models\GenDate2.cs" />
     <Compile Include="Enums\GenDateStringType.cs" />
+    <Compile Include="Models\GenDateStringParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EventService.cs" />
     <Compile Include="Services\PersonService.cs" />
