--- a/SQLite.BLL/SQLite.BLL.csproj
+++ b/SQLite.BLL/SQLite.BLL.csproj
@@ -78,23 +78,17 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\GenExtension.cs" />
     <Compile Include="Interfaces\IEventService.cs" />
     <Compile Include="Interfaces\IPersonService.cs" />
-    <Compile Include="Models\DatePart.cs" />
-    <Compile Include="Models\DateStringParser.cs" />
-    <Compile Include="Models\GenDate.cs" />
-    <Compile Include="Enums\GenDateType.cs" />
-    <Compile Include="Enums\GenDateStringType.cs" />
-    <Compile Include="Models\MonthName.cs" />
-    <Compile Include="Models\RootsMagicDateStringParser.cs" />
-    <Compile Include="Interfaces\IDateStringParser.cs" />
-    <Compile Include="Models\LegacyDateStringParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EventService.cs" />
     <Compile Include="Services\PersonService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Enums\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SQLite.DAL\SQLite.DAL.csproj">
       <Project>{8C0C6DE1-50DB-4E49-9D53-229CEE566E12}</Project>
