--- a/SQLite.WEB/SQLite.WEB.csproj
+++ b/SQLite.WEB/SQLite.WEB.csproj
@@ -172,12 +172,16 @@
     <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PersonController.cs" />
+    <Compile Include="Extensions\SelectListExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ByNameTypeViewModel.cs" />
+    <Compile Include="Models\DatePartEditModel.cs" />
+    <Compile Include="Models\EventEditModel.cs" />
     <Compile Include="Models\EventTypeViewModel.cs" />
     <Compile Include="Models\EventViewModel.cs" />
+    <Compile Include="Models\GenDateEditModel.cs" />
     <Compile Include="Models\PersonViewModel.cs" />
     <Compile Include="Models\ByNameViewModel.cs" />
     <Compile Include="Models\PlaceViewModel.cs" />
@@ -222,6 +226,9 @@
     <Content Include="Views\Person\Index.cshtml" />
     <Content Include="Views\Person\Details.cshtml" />
     <Content Include="Views\Event\Index.cshtml" />
+    <Content Include="Views\Event\Details.cshtml" />
+    <Content Include="Views\Event\Edit.cshtml" />
+    <Content Include="Views\Event\_EventEditForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
